done with register and activating token. ongoing with password update
